[package]
name = "dotenvsubst"
version = "0.1.2"
authors = ["Gianmarco Leone <gianmarco.leone@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/gmlion/dotenvsubst"
keywords = ["search", "replace", "dotenv", "environment", "env"]
description = "A zero-dependency cli tool to search and replace environment variables from .env files"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
exitfailure = "0.5.1"
structopt = "0.3.14"